tests/NormalTests/paczka1/fuzzy1/87407020.err
Error in line 1: uUwTqW0FhT S243 97,9
Error in line 10: uUwTqW0FhT A279 64,2
Error in line 3: KM6apIM S243 92,1
Error in line 14: KM6apIM S407 10,2
Error in line 16: KM6apIM S243 76,9
Error in line 17: KM6apIM A470 23,1
Error in line 33: AMVJcht S243 30,3
Error in line 34: AMVJcht A470 49,8
Error in line 25: OQNr6M A279 2034,5
